--- a/type.css
+++ b/type.css
@@ -96,7 +96,7 @@ p {
     .first {
         display: flex;
         flex-direction: column;
-        margin-top: 235px;
+        margin-top: 260px;
         margin-right: 0px;
     }
     
